<resources>
    <string name="app_name">MyUNIST_info</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="EE">ee</string>
    <string name="CSE">cse</string>
    <string name="ECHE">eche</string>
    <string name="PHYSICS">physics</string>
    <string name="MATH">math</string>
    <string name="BUSINESS">business</string>
    <string name="MECHANIC">mechanic</string>
    <string name="Ustrings.xmlRBAN">urban</string>
    <string name="LIFE">life</string>
    <string name="DESIGN">design</string>
    <string name="MATERIAL">material</string>
    <string name="CHEMISTRY">chemistry</string>
    <string name="QUESTION">QandA</string>
    <string name="ANNOUNCEMENT">announcement</string>
    <string name="ATTENDANCE">attendance</string>
    <string name="AboutNPC">AboutNPC</string>
    <string name="CALL">Call</string>
    <string name="FAQ">FAQ</string>
    <string name="title_activity_introduction">Introduction</string>
    <string name="title_activity_my_page__option">MyPage_Option</string>
    <string name="title_activity_authentication">Authentication</string>
    <string name="call_dialog_title">영재교육센터</string>
    <string name="call_dialog_contents">연결하시겠습니까?</string>
    <string name="call_dialog_confirm">확인</string>
    <string name="call_dialog_cancel">취소</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="title_activity_developer_info">DeveloperInfo</string>
    <string name="Developer_info">Developer By.</string>
    <string name="Developer_Slogan">\"코딩이 미래다.\"</string>
    <string name="title_activity_attendance" />
    <string name="title_activity_splash1">Splash1</string>
    <string name="title_activity_splash2">Splash2</string>
    <string name="title_subject">개설교과목조회</string>
    <string name="sample_subject">신소재공학부</string>
    <string name="sample_subtitle">재료공학개론</string>
    <string name="sample_code">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세\n</string>
    <string name="sample_school">학부소개</string>
    <string name="sample_track">학과소개</string>
    <string name="title_activity_send_email_for_gift">SendEmailForGift</string>
    <string name="title_activity_announce_list">AnnounceList</string>
</resources>
