<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:layout_weight="1">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10px"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10px"
                android:layout_weight="1">
                <LinearLayout
                    android:id="@+id/c11"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c12"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c13"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c14"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c15"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10px"
                android:layout_weight="1">
                <LinearLayout
                    android:id="@+id/c21"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c22"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c23"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c24"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c25"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/b25"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/QUESTION"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10px"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10px"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/c31"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c32"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c33"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c34"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/b34"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ANNOUNCEMENT"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c35"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/b35"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ATTENDANCE"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10px"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/c41"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c42"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c43"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/b43"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/AboutNPC"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c44"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/b44"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/CALL"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c45"
                    android:layout_width="10px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/b45"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/FAQ"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
