<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/main_img"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/eebg">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#55000000"
            android:orientation="vertical"
            android:elevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="bottom">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_looks_one_white_24dp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sample_school"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:gravity="bottom"
                    android:padding="5dp"
                    android:textColor="#FFFFFF"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/depart_name_ko"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18dp"
                    android:textColor="#FFFFFF"
                    android:paddingLeft="45dp"
                    android:paddingTop="5dp"
                    android:text="@string/sample_subject"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15dp"
                    android:textColor="#FFFFFF"
                    android:paddingLeft="45dp"
                    android:text=" "/>
            </LinearLayout>




        </FrameLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:elevation="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:elevation="25dp"
            android:background="#3F51B5">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:text="뭘 넣어도 이상할게야"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:background="#F5F5F5">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">
                <TextView
                    android:id="@+id/contents"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sample_code"
                    android:textColor="#212121"
                    android:textSize="16dp"
                    android:lineSpacingExtra="3dp"/>
            </ScrollView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>